--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ ipython_config.py
 .idea
 
 # Submission File
-competition/submission.csv
+competition/submission_v2.csv
 competition/export_dataframe.csv
